--- a/mycloth/src/css/navbar.scss
+++ b/mycloth/src/css/navbar.scss
@@ -6,6 +6,7 @@
     padding: 0 25px;
 }
 
+
 #mainNav ul {
     display: flex;
     list-style-type: none;
@@ -17,10 +18,19 @@
     color: black;
     margin: 10px 20px;
     cursor: pointer;
+    
 }
 
-#mainNav li.active {
-    color:#722010;
+#mainNav li a:visited {
+    color: #000;
+}
+
+#mainNav li a {
+    text-decoration: none;
+}
+
+#mainNav li.active a{
+    color:rgb(209, 173, 12); 
 }
 
 #mainNav li:first-of-type {
@@ -28,6 +38,12 @@
 }
 
 #basket {
-    width: 80px;
+    width: 45px;
+    margin-right: 10px;
     cursor: pointer;
+}
+
+#cart {
+    display: flex;
+    align-items: center;
 }
